--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,9 @@
   </issueManagement>
 
   <properties>
+    
+      <sonar.organization>markel-f</sonar.organization>
+
       <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
     <skipTests>true</skipTests>
     <!-- Shared properties with plugins and version numbers across submodules-->
